--- a/stylus/start.styl
+++ b/stylus/start.styl
@@ -1,5 +1,4 @@
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300")
-/** Basics styles. Body, Head, H1, basics floats, prints, columns... **/
 
 body
   margin 0
@@ -17,7 +16,6 @@ header
   display inline
 .clearfix
   clear border-top 
-  
 .rounded
   border-radius 1em
 
@@ -145,12 +143,11 @@ select
   padding 0.5em
 
 a
+  color color-base
   text-decoration none
-  &:hover,&:focus
-    text-decoration underline
-    outline thin dotted #333
-    outline 5px auto -webkit-focus-ring-color
-    outline-offset -2px
+  &:hover,
+  &:focus
+    color black
   
 
 .img-responsive
