--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -13,9 +13,10 @@ TODO
 a:links:hover
 text
 form example
-github
 fonts - iconmoon - social 
 more media-queries
+readme
 review BEM
 radio btns
+usage & documentation
 */
