--- a/stylus/theme.styl
+++ b/stylus/theme.styl
@@ -6,9 +6,15 @@
 	font-size 0.8em
 
 #buttons
-	text-align center
-
+	
+	
+#buttons
+	.grid
+		text-align center
+		div[class*="col-"]
+			margin 2em 0
 /* GRID */
+
 .grid
 	overflow hidden
 
