--- a/stylus/start.styl
+++ b/stylus/start.styl
@@ -205,7 +205,11 @@ img.valign
   border-color lighten(color-error, 20%)
   background-color color-error
   color lighten(color-error, 50%)
-  
+
+.required
+  font-size 0.8em
+  color color-error
+
 input, textarea
   margin 1.7em 0
   
