adjust color buttons

--- a/stylus/buttons.styl
+++ b/stylus/buttons.styl
@@ -3,7 +3,7 @@
 .btn
   font-family 'Open Sans', Arial, sans-serif
   line-height 2.25em
-  color #262626
+  color white
   text-align center
   vertical-align middle
   font-size 0.8em
@@ -68,7 +68,7 @@
   white-space nowrap
   margin 0
   padding 0.5em 2.5em
-  color white
+  color black
   background-color color-base2
   &:hover
     text-decoration none
