--- a/stylus/config.styl
+++ b/stylus/config.styl
@@ -1,5 +1,5 @@
-color-base=#98e6e7
-color-base2=#97C0D9
+color-base=#51B4D4
+color-base2=#FEAE37
 color-error=#c31111
 color-success=#8AF264
 color-facebook=#3C599B
