--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -6,17 +6,14 @@
 @import "media-queries.styl"
 @import "theme.styl"
 
-
 /*
 TODO
 ----
-a:links:hover
 text
-form example
 fonts - iconmoon - social 
 more media-queries
 readme
 review BEM
-radio btns
+radio btns color
 usage & documentation
 */
