--- a/css/style.css
+++ b/css/style.css
@@ -183,12 +183,12 @@ th {
 .btn {
   font-family: 'Open Sans', Arial, sans-serif;
   line-height: 2.25em;
-  color: #262626;
+  color: #fff;
   text-align: center;
   vertical-align: middle;
   font-size: 0.8em;
   white-space: nowrap;
-  background-color: #98e6e7;
+  background-color: #51b4d4;
   cursor: pointer;
   border: 0;
   margin: 0;
@@ -209,7 +209,7 @@ th {
 }
 .btn--small:hover {
   text-decoration: none;
-  background-color: #249a9b;
+  background-color: #1d6075;
   color: #fff;
 }
 .btn--small:active,
@@ -229,7 +229,7 @@ th {
 }
 .btn--medium:hover {
   text-decoration: none;
-  background-color: #249a9b;
+  background-color: #1d6075;
   color: #fff;
 }
 .btn--medium:active,
@@ -249,7 +249,7 @@ th {
 }
 .btn--large:hover {
   text-decoration: none;
-  background-color: #249a9b;
+  background-color: #1d6075;
   color: #fff;
 }
 .btn--large:active,
@@ -263,8 +263,8 @@ th {
   white-space: nowrap;
   margin: 0;
   padding: 0.5em 2.5em;
-  color: #fff;
-  background-color: #97c0d9;
+  color: #000;
+  background-color: #feae37;
   -moz-transition: all 0.5s ease-out;
   -o-transition: all 0.5s ease-out;
   -webkit-transition: all 0.5s ease-out;
@@ -272,7 +272,7 @@ th {
 }
 .btn--secondary:hover {
   text-decoration: none;
-  background-color: #6fa8ca;
+  background-color: #fe9b09;
 }
 .btn--secondary:active,
 .btn--secondary:focus {
@@ -302,12 +302,12 @@ th {
 }
 .btn--ghost {
   line-height: 2.25em;
-  color: #98e6e7;
+  color: #51b4d4;
   background-color: transparent;
   text-align: center;
   vertical-align: middle;
   font-size: 1em;
-  border: 1px solid #98e6e7;
+  border: 1px solid #51b4d4;
   white-space: nowrap;
   font-weight: bold;
   margin: 0;
@@ -319,7 +319,7 @@ th {
 }
 .btn--ghost:hover {
   text-decoration: none;
-  background-color: #98e6e7;
+  background-color: #51b4d4;
   color: #fff;
 }
 .btn--ghost:active,
@@ -327,6 +327,7 @@ th {
   outline: none;
 }
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300");
+@import url("http://fonts.googleapis.com/css?family=Droid+Sans:400,700");
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif, arial;
@@ -351,8 +352,9 @@ header {
   border-radius: 1em;
 }
 h1 {
+  font-family: 'Droid Sans', 'Open Sans', sans-serif;
   font-size: 3em;
-  font-weight: 300;
+  font-weight: 600;
   line-height: 1.5em;
   margin: 0;
 }
@@ -365,6 +367,7 @@ h2 {
 h3 {
   font-size: 2em;
   line-height: 1.5em;
+  font-weight: 300;
   margin: 0;
 }
 h4 {
@@ -478,7 +481,7 @@ select {
   padding: 0.5em;
 }
 a {
-  color: #98e6e7;
+  color: #51b4d4;
   text-decoration: none;
 }
 a:hover,
@@ -512,11 +515,11 @@ a:focus {
   transition: all all ease-out;
 }
 ::selection {
-  background: #e95a6e;
+  background: #61473a;
   color: #fff;
 }
 ::-moz-selection {
-  background: #e95a6e;
+  background: #61473a;
   color: #fff;
 }
 img.valign {
@@ -537,12 +540,12 @@ img.valign {
 .alert--success {
   border-color: #a1f583;
   background-color: #8af264;
-  color: #349e0d;
+  color: #153f05;
 }
 .alert--error {
   border-color: #ec2424;
   background-color: #c31111;
-  color: #f37676;
+  color: #fde4e4;
 }
 .required {
   font-size: 0.8em;
@@ -550,7 +553,7 @@ img.valign {
 }
 input,
 textarea {
-  margin: 1.7em 0;
+  margin: 1.2em 0;
 }
 input.rounded,
 textarea.rounded {
@@ -564,6 +567,9 @@ textarea.small {
 input[type="checkbox"],
 input[type="radio"] {
   margin-right: 1em;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 @media only screen and (max-width: 32em) {
   body {
@@ -607,23 +613,21 @@ input[type="radio"] {
 }
 .boxed > div {
   border: 1px solid #000;
-  background-color: #fa8072;
+  background-color: #51b4d4;
   overflor: hidden;
   padding: 0.51em;
 }
 .boxed > div:hover {
-  background-color: #f8513d;
+  background-color: #feae37;
 }
 /*
 TODO
 ----
-a:links:hover
 text
-form example
 fonts - iconmoon - social 
 more media-queries
 readme
 review BEM
-radio btns
+radio btns color
 usage & documentation
 */
