--- a/stylus/theme.styl
+++ b/stylus/theme.styl
@@ -5,8 +5,6 @@
 #typography span 
 	font-size 0.8em
 
-#buttons
-	
 	
 #buttons
 	.grid
@@ -20,8 +18,8 @@
 
 .boxed > div
 	border 1px solid black
-	background-color salmon
+	background-color #51B4D4
 	overflor hidden
 	padding 0.51em
 	&:hover
-		background-color darken(salmon, 15%)
+		background-color #FEAE37
