--- a/stylus/config.styl
+++ b/stylus/config.styl
@@ -2,9 +2,11 @@ color-base=#51B4D4
 color-base2=#FEAE37
 color-error=#c31111
 color-success=#8AF264
+color-twitter=#5EA9DD
 color-facebook=#3C599B
-main-width=978px
+color-googleplus=#DA4835
 
+main-width=978px
 
 transition(time=0.5s)
 	-moz-transition all time ease-out
