--- a/stylus/start.styl
+++ b/stylus/start.styl
@@ -228,3 +228,20 @@ input[type="checkbox"], input[type="radio"]
 input[type="number"] {
     -moz-appearance:textfield;
 }
+
+.bg-twitter
+  background color-twitter
+  color white
+  padding 1em
+  
+.bg-facebook
+  background color-facebook
+  color white
+  padding 1em
+  padding 1em
+  
+.bg-googleplus
+  background color-googleplus
+  color white
+  padding 1em
+  padding 1em
