--- a/stylus/theme.styl
+++ b/stylus/theme.styl
@@ -1,7 +1,7 @@
-/*body > section:nth-child(even)
-	background-color #212121
-	color #F4F4F2
-*/	
+/*body > section:nth-child(odd)
+	background-color #EEEEEE
+*/
+	
 #typography span 
 	font-size 0.8em
 
@@ -23,3 +23,12 @@
 	padding 0.51em
 	&:hover
 		background-color #FEAE37
+
+/* icons */
+[class^="icon-"], [class*=" icon-"]
+	font-size 2em
+	margin .5em
+
+#icons div
+	margin 1em 0
+	text-align center
