--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -1,4 +1,5 @@
 @import "grid.css"
+@import "fonts.css"
 @import "normalize.styl"
 @import "config.styl"
 @import "buttons.styl"
@@ -9,8 +10,6 @@
 /*
 TODO
 ----
-text
-fonts - iconmoon - social 
 more media-queries
 readme
 review BEM
