--- a/stylus/start.styl
+++ b/stylus/start.styl
@@ -26,7 +26,7 @@ h1
   font-weight 600
   line-height 1.5em
   margin 0
-  
+ 
 h2 
   font-size 2.3em
   font-weight 300
@@ -180,8 +180,8 @@ a
   background #61473A
   color #FFF
   
-::-moz-selection
-  background #61473A /* Firefox */
+::-moz-selection /* Firefox */
+  background #61473A 
   color #FFF
 
 img.valign
@@ -212,6 +212,9 @@ img.valign
   font-size 0.8em
   color color-error
 
+.full
+  width 100%
+
 input, textarea
   margin 1.2em 0
 
@@ -238,10 +241,8 @@ input[type="number"] {
   background color-facebook
   color white
   padding 1em
-  padding 1em
   
 .bg-googleplus
   background color-googleplus
   color white
-  padding 1em
   padding 1em
