--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -8,11 +8,11 @@
 @import "theme.styl"
 
 /*
-TODO
+TO-DO
 ----
 more media-queries
 readme
 review BEM
-radio btns color
 usage & documentation
+radio btns color
 */
