--- a/stylus/media-queries.styl
+++ b/stylus/media-queries.styl
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 32em)
   /* Mobile first queries */
   body
+    font-size 0.8em
     padding 0em
 
   body >section
@@ -15,6 +16,10 @@
     margin 0
     padding 0.8em
     width 100%
+    
+  [class^="icon-"], [class*=" icon-"]
+    font-size 1em
+    margin .2em
 
 @media only screen and (min-width: 32em)
   /* Tablets & Desk */
@@ -23,7 +28,6 @@
 
   input[type="text"]
     padding 0.8em
-
 
 
 /*@media print*/
