--- a/css/style.css
+++ b/css/style.css
@@ -594,19 +594,22 @@ input[type="number"] {
   body {
     font-size: 0.8em;
     padding: 0em;
+    box-sizing: border-box;
   }
-  body >section {
-    padding: 1em;
+  body > section {
+    padding: 0.1em;
   }
   input[type="text"],
+  [type="number"],
+  [type="tel"],
   textarea,
   select {
-    margin: 0;
+    margin: 0.2em;
     padding: 0.8em;
     width: 100%;
   }
   textarea {
-    margin: 0;
+    margin: 0.2em;
     padding: 0.8em;
     width: 100%;
   }
