--- a/stylus/media-queries.styl
+++ b/stylus/media-queries.styl
@@ -3,17 +3,19 @@
   body
     font-size 0.8em
     padding 0em
+    box-sizing: border-box;
 
-  body >section
-    padding 1em
+  body > section
+    padding 0.1em
+     
 
-  input[type="text"],textarea, select
-    margin 0
+  input[type="text"],[type="number"],[type="tel"],textarea, select
+    margin 0.2em
     padding 0.8em
     width 100%
     
   textarea
-    margin 0
+    margin 0.2em
     padding 0.8em
     width 100%
     
