adjust responsive sizes

--- a/stylus/media-queries.styl
+++ b/stylus/media-queries.styl
@@ -1,15 +1,16 @@
 @media only screen and (max-width: 32em)
   /* Mobile first queries */
   body
-    font-size 0.8em
+    font-size 0.9em
     padding 0em
     box-sizing: border-box;
 
   body > section
-    padding 0.1em
+    padding 0.3em
      
 
   input[type="text"],[type="number"],[type="tel"],textarea, select
+    box-sizing: border-box;
     margin 0.2em
     padding 0.8em
     width 100%
