--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,7 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif, arial;
   padding: 2em;
+  font-size: 1em;
 }
 header {
   padding: 2em;
@@ -592,18 +593,19 @@ input[type="number"] {
 }
 @media only screen and (max-width: 32em) {
   body {
-    font-size: 0.8em;
+    font-size: 0.9em;
     padding: 0em;
     box-sizing: border-box;
   }
   body > section {
-    padding: 0.1em;
+    padding: 0.3em;
   }
   input[type="text"],
   [type="number"],
   [type="tel"],
   textarea,
   select {
+    box-sizing: border-box;
     margin: 0.2em;
     padding: 0.8em;
     width: 100%;
